# Fair9

./: .gitignore  LICENSE  MODELS.md  README.md  SIGNING.md
.github/workflows/: release.yml
fairnine_flutter/: README.md  flutter_analysis.txt  pubspec.yaml  setup_bridge.bat  setup_fair9.iss
fairnine_flutter/assets/: snippets.json
fairnine_flutter/lib/: hotkey_controller.dart  main.dart  native.dart
fairnine_flutter/native/: Cargo.toml  build.rs
fairnine_flutter/native/src/: api.rs  lib.rs
fairnine_flutter/test/: hotkey_injection_test.dart  widget_test.dart
fairnine_flutter/windows/: CMakeLists.txt
fairnine_flutter/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
fairnine_flutter/windows/runner/: Runner.rc  main.cpp
