[package]
name = "native"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[build-dependencies]
flutter_rust_bridge_codegen = "1.80.1"

[dependencies]
flutter_rust_bridge = "1.80.1"
anyhow = "1.0"
lazy_static = "1.4"
cpal = "0.15"
whisper-rs = { version = "0.13", features = ["cuda"] } # Or "openblas" depending on system, default safe
dasp = { version = "0.11", features = ["signal"] }
parking_lot = "0.12"
log = "0.4"
dirs = "4.0"
ureq = "2.9"
